@@ -10,11 +10,25 @@ plugins {
     id 'application'
     id 'distribution'
     id 'org.beryx.jlink' version '2.25.0' 
+    id("com.github.johnrengelman.shadow") version "7.1.0"
 }
 
-//compileJava {
-//    options.compilerArgs << '--add-exports=javafx.web/com.sun.webkit=ALL-UNNAMED' 
-//}
+group="erb"
+version="1.0.1"
+
+java {
+    modularity.inferModulePath.set(false)
+}
+
+javafx{
+    version = '17'
+	modules = ['javafx.fxml', 'javafx.controls', 'javafx.graphics', 'javafx.web', 'javafx.swing']
+}
+
+application {
+    mainClass = 'com.epa.erb.Main'
+    mainModule = 'com.epa.erb'
+}
 
 repositories {
     mavenCentral()
@@ -24,11 +38,6 @@ repositories {
 }
 
 dependencies {
-	//implementation 'org.apache.logging.log4j:log4j:2.17.1'
-	//implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
-	//implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
-	//implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-	//implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 	implementation 'commons-io:commons-io:2.11.0'
 	implementation 'org.controlsfx:controlsfx:11.1.2'	
 	implementation 'org.apache.poi:poi-ooxml:5.2.3'
@@ -36,17 +45,13 @@ dependencies {
 }
 
 
-javafx{
-    version = '17'
-	modules = ['javafx.fxml', 'javafx.controls', 'javafx.graphics', 'javafx.web', 'javafx.swing']
-}
-
-application {
-    mainClass = 'com.epa.erb.App'
-    mainModule = 'com.epa.erb'
-}
-
 applicationDefaultJvmArgs = ["-Dprism.maxvram=2G"]
+
+tasks {
+    shadowJar {
+        exclude("module-info.class")
+    }
+}
 
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--ignore-signing-information']
